Fixed animation on safari and chrome

--- a/css/store.css
+++ b/css/store.css
@@ -5,8 +5,6 @@
     font-family: "Times New Roman", sans-serif;
 }
 
-body {
-}
 
 #wrapper {
     background-color: white;
@@ -77,15 +75,29 @@ body {
     background: linear-gradient(280deg, white, #575A5E);
 }
 
+@keyframes slider{
+    0%{
+        background-image: url("../images/RRname.png")
+    }
+
+    100% {
+        background-image: url("../images/shirt.jpg")
+    }
+}
+
 .homehero {
     height: 437px;
     width: 50%;
     position: absolute;
     left: 33%;
     background-size: 500px 500px;
-    background-image: url("images/RRname.png");
+    background-image: url("../images/RRname.png");
     background-repeat: no-repeat;
-    animation:slider 10s linear infinite;
+    animation-name: slider;
+    animation-delay: 2s;
+    animation-duration: 4s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 .rightblock {
@@ -107,25 +119,6 @@ body {
     width: 618px;
     background:
             linear-gradient(100deg, white, #575A5E);
-}
-
-@keyframes slider {
-    0%{
-        background-image: url("images/RR.png")
-    }
-
-    33% {
-        background-image: url("images/shirt.jpg")
-    }
-
-    55%{
-        background-image: url("images/shirt.jpg")
-    }
-
-    100%{
-        background-image: url("images/RR.png")
-    }
-
 }
 
 .container h1{
